--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick and Morty Data</title>
+    <title>Apex Lengends Current Map</title>
     <script src=index.js defer></script>
   </head>
   <body>
-    <div id="rick-and-morty-maps"></div>
+    <div id="apex-maps"></div>
   </body>
 </html>
